[gd_scene load_steps=2 format=3 uid="uid://bbaf2bgyxq2pk"]

[ext_resource type="Script" path="res://src/shared/gui/TexButton.gd" id="1"]

[node name="TexButton" type="TextureButton"]
self_modulate = Color(0.501961, 0.501961, 0.501961, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[connection signal="focus_entered" from="." to="." method="_on_TexButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TexButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_TexButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TexButton_mouse_exited"]
